put the good nudgenudge jquery addon into the user login and profile pages so that users can now be nudged to complete their profiles and update items as necessary

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,3 +17,21 @@ en:
   category: "Category"
   quantity: "Quantity"
   metadata: "Item Name"
+  email_placeholder : "ex. johnsmith411@a16z.com"
+  password_placeholder : ""
+  phone_placeholder : "ex. 555-123-4567"
+  company_placeholder : "ex. ACME Inc."
+  email_help : "Your company email"
+  password_help : "Something you can remember"
+  phone_help : "Your main contact number"
+  company_help : "Your company's name"
+  shipping : "Preferred shipping method"
+  address : "Address"
+  city : "City"
+  state : "State"
+  zip : "Zip"
+  country : "Country"
+  complete : "Congratulations! Everything works now!"
+  location_almost_complete : "You need to update your company location"
+  item_almost_complete : "You need to list your products if you want to sell them"
+  
