--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,50 @@
 == Welcome to Rails
 
+upstream domain1 {
+        server 127.0.0.1:3000;
+        server 127.0.0.1:3001;
+        server 127.0.0.1:3002;
+    }
+
+server {
+            listen   80;
+            server_name  www.domain.com;
+            rewrite ^/(.*) http://domain.com/$1 permanent;
+           }
+
+
+server {
+            listen   80;
+            server_name domain.com;
+
+            access_log /home/demo/public_html/railsapp/log/access.log;
+            error_log /home/demo/public_html/railsapp/log/error.log;
+
+            root   /home/demo/public_html/railsapp/public/;
+            index  index.html;
+
+            location / {
+                          proxy_set_header  X-Real-IP  $remote_addr;
+                          proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+                          proxy_set_header Host $http_host;
+                          proxy_redirect false;
+
+                          if (-f $request_filename/index.html) {
+                                           rewrite (.*) $1/index.html break;
+                          }
+
+                          if (-f $request_filename.html) {
+                                           rewrite (.*) $1.html break;
+                          }
+
+                          if (!-f $request_filename) {
+                                           proxy_pass http://domain1;
+                                           break;
+                          }
+            }
+
+}
+
 Rails is a web-application framework that includes everything needed to create
 database-backed web applications according to the Model-View-Control pattern.
 
