reworked the UX a bit so it is not as annoying and put in the jquery ui rails gem with several helpers to make the view process a little less anonying on the eyes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -151,8 +151,8 @@ en: {
 		bids: {
 			show : { 
 				price: "Offer Price" ,
-				shipping: "Shipping" ,
-				city: "City",
+				shipping: "Price Terms" ,
+				city: "Location",
 				nothing_here_yet: "Nothing here yet!"
 			} , # show
 			forms: {
