improved functionality a big more and fixed the actionview bug where certain things would not show up. We now visit the bid show page a lot less now

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -133,7 +133,8 @@ en: {
 					material: "How is it packed?" ,
 					category: "Category" ,
 				  quantity: "Quantity" ,
-				  submit: "Go Next"
+				  submit: "Go Next" ,
+				  edit: "Edit Listing", 
 				} , # labels
 				new: { 
 					item : "New Item Listing" ,
