worked in item statuses and miraculously got all the tests to pass

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -120,6 +120,7 @@ en: {
 				category: "Category",
 				quantity: "Quantity" ,
 				units: "Units" ,
+				material_type: "Type" ,
 			} , # show
 			forms: {
 				placeholders: {
