worked in the ability to sell items now to the correct user. we are good to go for deployment tomorrow

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -182,7 +182,8 @@ en: {
 				price: "Offer Price" ,
 				shipping: "Price Terms" ,
 				city: "Location",
-				nothing_here_yet: "Nothing here yet!"
+				nothing_here_yet: "Nothing here yet!" ,
+				sell_to : "Sell?" ,
 			} , # show
 			forms: {
 				placeholders: {
