minor fixes to the controllers and views to only show ready items. we are now production ready

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -136,6 +136,7 @@ en: {
 				  quantity: "Quantity" ,
 				  submit: "Go Next" ,
 				  edit: "Edit Listing", 
+				  material_type : "Type" ,
 				} , # labels
 				new: { 
 					item : "New Item Listing" ,
