introduced 4 new models to handle the issues with shipping, trucking, additional services, and how they tie into the old bids model

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -168,7 +168,7 @@ en: {
 				} , # placeholders
 				labels: {
 					name : "Destination" ,
-					shipping: "Preferred Shipping Method" ,
+					shipping: "Price Terms" ,
 					address: "Address",
 					city: "City",
 					state: "State",
