got the got forsaken truck and ships controllers working god, fucking took forever because of really stupid shit in the json views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -225,6 +225,7 @@ en: {
 					bid : "Make an Offer" ,
 					initial_price : "Set Initial Price" ,
 					insurance : "Additional Services" ,
+					asking_price : "Asking Price" ,
 				} , # new
 				show: { 
 					bid_data : "Listing Statistics" ,
