new bid views complete. we are fucking good to go

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -224,6 +224,7 @@ en: {
 					transportation : "Shipping & Trucking" ,
 					insurance : "Additional Services" ,
 					trucking : "Trucking" ,
+					truckping : "Trucking" ,
 					shipping : "Shipping" ,
 					start : "Start" ,
 					finish : "Destination" ,
@@ -252,6 +253,11 @@ en: {
 					finish : "Destination" ,
 					containers : "Containers" ,
 					cost : "Cost" ,
+					title : "Service Name" ,
+					description : "Service Description" ,
+					company : "Organization" ,
+					price : "Price" ,
+					include : "Include?" ,
 				} , # labels
 			} , # forms
 		} , # service
